# rust-rc

./: .gitignore  .project  Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs  sumd.rs
receiver/: Cargo.toml  Makefile.toml  memory.x
receiver-arduino/: platformio.ini
receiver-arduino/src/: main.cpp
receiver-avr/: Cargo.toml
receiver-avr/.devcontainer/: Dockerfile  devcontainer.json
receiver-sumd/: Cargo.toml  Makefile.toml  memory.x
receiver-sumd/.cargo/: config
receiver-sumd/src/: main.rs
receiver/.cargo/: config
receiver/src/: main.rs
sumd/: Cargo.toml
sumd/src/: lib.rs
transmitter/: Cargo.toml  Makefile.toml
transmitter/src/: main.rs
