[package]
name = "protocol"
version = "0.1.0"
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.107", default-features = false }
postcard = "0.5.0"
embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
nb = "0.1.2"

[features]
defaults = []
use-std = []
