[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
name = "receiver"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
stm32f0xx-hal = { version = "0.17.1", features = [ "rt", "stm32f030x4" ] }
cortex-m = "0.7.1"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtic = "0.5.5"
nb = "1.0.0"
# stm32f0 = { version = "0.11.0", features = ["rt" ] }
# embedded-nrf24l01 = { git = "https://github.com/astro/embedded-nrf24l01" }
embedded-nrf24l01 = { path="../../embedded-nrf24l01", version="0.2.0-davidji.1" }
usb-device = "0.2.5"
usbd-serial = "0.1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "receiver"
test = false
bench = false

