[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
name = "receiver"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
# stm32f4xx-hal = { version = "0.7.0", features = [ "rt", "stm32f411", "usb_fs" ] }
stm32f4xx-hal = { path="../../stm32f4xx-hal", version = "0.7.0-davidji.1", features = [ "rt", "stm32f411", "usb_fs" ] }
cortex-m = "0.6.2"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.1"
nb = "0.1.2"
stm32f4 = { version = "0.10.0", features = ["rt" ] }
heapless = "0.5.4"
postcard = "0.5.0"
arraydeque = { version = "0.4", default-features = false }
protocol = { path = "../protocol", version="0.1.0" } 
serde = { version = "1.0.106", default-features = false }
cobs = { version = "0.1.4", default-features = false }
# embedded-nrf24l01 = { git = "https://github.com/astro/embedded-nrf24l01" }
embedded-nrf24l01 = { path="../../embedded-nrf24l01", version="0.2.0-davidji.1" }
usb-device = "0.2.5"
usbd-serial = "0.1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "receiver"
test = false
bench = false

