[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
name = "transmitter"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium" ] }
cortex-m = "0.7.0"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtic = "0.5.5"
nb = "0.1.2"
stm32f1 = { version = "0.13.0", features = ["rt", "stm32f103" ] }
heapless = "0.6.0"
embedded-nrf24l01 = { git = "https://github.com/astro/embedded-nrf24l01" }
# embedded-nrf24l01 = { path="../../embedded-nrf24l01", version="0.2.0-davidji.1" }
sumd = { path = "../sumd", version="0.1.0" }
protocol = { path = "../protocol", version="0.1.0" }

# this lets you use `cargo fix`!
[[bin]]
name = "transmitter"
test = false
bench = false
